--- a/chall1.ipynb
+++ b/chall1.ipynb
@@ -29,7 +29,8 @@
       "cell_type": "code",
       "source": [
         "print(\"testo di prova\")\n",
-        "print(\"hello world\")"
+        "print(\"hello world nigger\")\n",
+        "#altre cose"
       ],
       "metadata": {
         "colab": {
@@ -38,7 +39,7 @@
         "id": "Fgw3NIjwOHXA",
         "outputId": "3edbea7a-00a6-4c9c-af5f-1b73d4e7231a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
