Added Deliverables folder

--- a/Challenge 1/Preprocessing/CreateTheBestDataset.ipynb
+++ b/Challenge 1/Preprocessing/CreateTheBestDataset.ipynb
@@ -301,8 +301,8 @@
    },
    "source": [
     "## 🔆 Augmenting the training and validation set\n",
-    "We use AutoContrast and RandomSaturation from the keras library for the training set. It enhances contrast adaptively and may help in highlighting subtle differences between cell types without altering structure.\n",
-    "We added the agumented images to the training set & we applied some rotation, zoom and shift.\n",
+    "We use AutoContrast and RandomSaturation from the Keras library for the training set. It enhances contrast adaptively and may help in highlighting subtle differences between cell types without altering structure.\n",
+    "We added the augmented images to the training set & we applied some rotation, zoom and shift.\n",
     "\n",
     "We use RandAugment for the validation set."
    ]
